--- a/Landingpage.html
+++ b/Landingpage.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./Assets/styles/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>HotelLaROCHE</title>
 </head>
 <body>
@@ -64,9 +65,9 @@
         <div class="details">
             <div class="detailhead">
             <h3>Deluxe room</h3>
-            <div class="ratings">9.6(700)</div>
+            <div class="ratings animate__bounce"><i class="fa-sharp fa-regular fa-star" style="color: #ff0505;"></i>  9.6(700)</div>
         </div>
-            <p>Comfortable place with all essentials <br> NGN 32,500/night</p>
+            <p>Comfortable place with all essentials <br><span>NGN 32,500/night</span> </p>
         </div>
     </div>
 
@@ -80,9 +81,9 @@
         <div class="details">
             <div class="detailhead">
             <h3>Classic room</h3>
-            <div class="ratings">9.0(1200)</div>
+            <div class="ratings animate__bounce"><i class="fa-sharp fa-regular fa-star" style="color: #ff0505;"></i>  9.0(1200)</div>
         </div>
-            <p>High style and trendy with all great facil... <br> NGN 45,500/night</p>
+            <p>High style and trendy with all great facil... <br><span>NGN 45,500/night</span> </p>
         </div>
     </div>
 
@@ -97,9 +98,9 @@
         <div class="details">
             <div class="detailhead">
             <h3>Executive room</h3>
-            <div class="ratings">9.3(4000)</div>
+            <div class="ratings animate__bounce"><i class="fa-sharp fa-regular fa-star" style="color: #ff0505;"></i>  9.3(4000)</div>
         </div>
-            <p>Luxurious suite with all amenities,limous... <br> NGN 70,500/night</p>
+            <p>Luxurious suite with all amenities,limous... <br><span>NGN 70,500/night</span> </p>
         </div>
         
     </div>
@@ -163,8 +164,8 @@
             </div>
                 <div class="details">
                     <h3>Cinema</h3>
-                       <p>Kid's Tv channels</p>
-                       <p>Books,DVDs & music for kids</p> 
+                       <p class="tick">Kid's Tv channels</p>
+                       <p class="tick">Books,DVDs & music for kids</p> 
                 </div>
             </div>
             
@@ -174,9 +175,9 @@
                 --><div class="details">
                     <div class="detailhead">
                     <h3>Internet</h3>
-                    <div class="status">Free!</div>
+                    <div class="status animate__heartBeat">Free!</div>
                 </div>
-                       <p>WiFi is available in all areas and is free of charge </p>
+                       <p class="tick">WiFi is available in all areas and is free of charge </p>
                 </div>
             </div>
             <div class="col-1-3" id="Wellness">
@@ -185,8 +186,8 @@
                 <img src="./Assets/styles/images/homepage/hotel-parking-theft-1 4.png" alt="">
             </div>
                 <div class="details">
-                    <h3>Health & Wellness Facilities</h3>
-                       <p>Hot tub/jacuzzi </p>
+                    <h3 class="centeredtext">Health & Wellness Facilities</h3>
+                       <p class="tick">Hot tub/Jacuzzi </p>
                 </div>
             </div>
         </div>
@@ -198,16 +199,16 @@
     <section class="backgrd">
         <div class="container map">
             <div class="locationland">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d15857.958694071267!2d3.446099226974849!3d6.459472975230344!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1s20%20Nnajiofor%20way%2C%20Banana%20Island%20Ikoyi%2C%20Lagos%2C%20Nigeria%20map!5e0!3m2!1sen!2scm!4v1682611548428!5m2!1sen!2scm" ></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15922.662021743301!2d11.515578387460453!3d3.881695545861588!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x108bcf42130eb961%3A0x5d503c91bf378a69!2sQuartier%20Bastos%2C%20Yaound%C3%A9!5e0!3m2!1sen!2scm!4v1684507383385!5m2!1sen!2scm" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div class="contact">
                 <h3>Contact us</h3>
                 <ul>
-                    <li>20 Nnajiofor way,</li>
-                    <li>Banana Island Ikoyi,</li>
-                    <li>Lagos,</li>
-                    <li>Nigeria</li>
-                    <li>Call: +2347062022305</li>
+                    <li>Rue 237, Bastos,</li>
+                    <li>Mfoundi,</li>
+                    <li>Yaounde,</li>
+                    <li>Cameroon</li>
+                    <li>Call: +237674438236,<br>+237678167599</li>
                 </ul>
             </div>
         </div>
