--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
     </div>
 
     <section class="location">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d15857.958694071267!2d3.446099226974849!3d6.459472975230344!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1s20%20Nnajiofor%20way%2C%20Banana%20Island%20Ikoyi%2C%20Lagos%2C%20Nigeria%20map!5e0!3m2!1sen!2scm!4v1682611548428!5m2!1sen!2scm" width="100%" height="500" ></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15922.662021743301!2d11.515578387460453!3d3.881695545861588!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x108bcf42130eb961%3A0x5d503c91bf378a69!2sQuartier%20Bastos%2C%20Yaound%C3%A9!5e0!3m2!1sen!2scm!4v1684507383385!5m2!1sen!2scm" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
 
    
